--- a/_sass/3-layout/main.scss
+++ b/_sass/3-layout/main.scss
@@ -126,6 +126,7 @@
   .home-btn {
     padding: 28px 26.5px;
   }
+
   .contact-btn {
     padding: 28px 40.5px;
   }
@@ -221,26 +222,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 120px;
 
     @media screen and (max-width: 820px) {
       display: grid;
       grid-auto-flow: dense;
       grid-template-columns: 1fr;
       justify-items: center;
-      gap: 120px;
-    }
-
-    @include respond(phone) {
-      gap: 55px;
     }
 
     &__text {
       max-width: 471px;
       justify-self: start;
+      margin: 0 50px;
 
       @media screen and (max-width: 820px) {
         justify-self: auto;
+      }
+
+      @include respond(phone) {
+        margin: 0;
+        margin-bottom: 8px;
       }
 
       &--title {
@@ -248,11 +249,8 @@
         margin-bottom: 20px;
         font-weight: 600;
         letter-spacing: .05em;
-
-        @include respond(phone) {
-          margin-bottom: 8px;
-        }
       }
+
 
       &--heading {
         margin-bottom: 33px;
@@ -271,8 +269,14 @@
     }
 
     &__img {
-      width: 95%;
+      width: 38%;
       height: auto;
+      margin: 0 50px;
+
+      @media screen and (max-width: 820px) {
+        width: 95%;
+        margin: 0;
+      }
     }
   }
 }
